[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/mainmenu.gd" type="Script" id=1]
[ext_resource path="res://etc/menubg/render.jpg" type="Texture" id=2]
[ext_resource path="res://sprites/title.png" type="Texture" id=3]
[ext_resource path="res://scripts/ui/custom_button.gd" type="Script" id=4]
[ext_resource path="res://sprites/ui/btn_menu.png" type="Texture" id=5]
[ext_resource path="res://fonts/imported/DroidSans18.fnt" type="BitmapFont" id=6]
[ext_resource path="res://scenes/scenery.tscn" type="PackedScene" id=7]
[ext_resource path="res://models/levels/desert/level.scn" type="PackedScene" id=8]

[node name="mainmenu" type="Node"]

script/script = ExtResource( 1 )

[node name="gui" type="Control" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="bgImage" type="TextureFrame" parent="gui"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="title" type="TextureFrame" parent="gui"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 300.0
margin/top = 140.0
margin/right = -300.0
margin/bottom = 76.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 0

[node name="btnPlay" type="Control" parent="gui"]

editor/display_folded = true
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 220.0
margin/top = 30.0
margin/right = -220.0
margin/bottom = -10.0
script/script = ExtResource( 4 )

[node name="sprite" type="TextureFrame" parent="gui/btnPlay"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -50.0
margin/top = 0.0
margin/right = 490.0
margin/bottom = 40.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 0

[node name="label" type="Label" parent="gui/btnPlay"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 440.0
margin/bottom = 40.0
custom_fonts/font = ExtResource( 6 )
text = "Play"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btnSettings" type="Control" parent="gui"]

editor/display_folded = true
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 220.0
margin/top = -30.0
margin/right = -220.0
margin/bottom = -70.0
script/script = ExtResource( 4 )

[node name="sprite" type="TextureFrame" parent="gui/btnSettings"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -50.0
margin/top = 0.0
margin/right = 490.0
margin/bottom = 40.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 0

[node name="label" type="Label" parent="gui/btnSettings"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 440.0
margin/bottom = 40.0
custom_fonts/font = ExtResource( 6 )
text = "Settings"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btnQuit" type="Control" parent="gui"]

editor/display_folded = true
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 220.0
margin/top = -90.0
margin/right = -220.0
margin/bottom = -130.0
script/script = ExtResource( 4 )

[node name="sprite" type="TextureFrame" parent="gui/btnQuit"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -50.0
margin/top = 0.0
margin/right = 490.0
margin/bottom = 40.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 0

[node name="label" type="Label" parent="gui/btnQuit"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 440.0
margin/bottom = 40.0
custom_fonts/font = ExtResource( 6 )
text = "Quit"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="world" type="Spatial" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="scenery" parent="world" instance=ExtResource( 7 )]

[node name="camera" type="Camera" parent="world"]

_import_path = NodePath("Camera")
_import_transform = Transform( 0.727591, 0.290191, -0.621611, 3.1853e-06, 0.906123, 0.423015, 0.686011, -0.307784, 0.659286, -11.1608, 7.89029, 7.29951 )
transform/local = Transform( 0.784612, 0.262261, -0.561785, 3.1853e-06, 0.906123, 0.423015, 0.619987, -0.331904, 0.710954, -11.1608, 5.89029, 7.29951 )
projection = 0
fov = 40.0
near = 0.1
far = 100.0
keep_aspect = 1
current = false
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0

[node name="level" parent="world" instance=ExtResource( 8 )]

[node name="level2" parent="world" instance=ExtResource( 8 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -80 )

[node name="vehicles" type="Spatial" parent="world"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="spawnPos" type="Position3D" parent="world"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 13 )


